# transact

./: .gitignore  README.md  pyproject.toml
backend/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 1677e212d8a2_require_laboratory_institutional_.py  1f2a3b4c5d6e_add_laboratory_approval_status.py  2847c985a765_add_study_corresponding_author_name.py  2a3b4c5d6e7f_add_study_quality_check_reviewer.py  3b4c5d6e7f8a_add_lab_membership_request.py  4e648704f1f2_make_user_laboratory_id_nullable.py  52587d8c6b8f_split_corresponding_author_contact_into_.py  9f1a2b3c4d5e_add_study_published.py  a1b2c3d4e5f6_move_contact_scenario_fk.py  b67a14a0b4dd_custom_jwt_auth_replace_fastapi_users_.py  bc7f31965aba_add_user_permission_flags.py  c09977495acd_make_laboratory_address_fields_optional.py  cc4448bf52aa_add_user_passkey_prompt_dismissed.py  d2b9a65688ca_add_author_table_drop_study_type_and_.py  e28a22be3bfd_add_webauthn_credentials.py
backend/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/api/: exceptions.py  main.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/crud/: activity_category.py  base.py  body_part_condition_category.py  ce_method.py  condition_during_contact.py  condition_of_item_part_category.py  contact.py  cutting_device.py  cutting_method.py  determination_of_shedding_propensity_category.py  disturbance_category.py  epg_analysis_method.py  epg_interpretation_method.py  exceptions.py  experience_level.py  (+43 more)
frontend/: env.d.ts  index.html  package-lock.json  package.json
frontend/src/: main.ts
(+278 files in other folders)
